# --------------------------------
# pion automake configuration file
# --------------------------------

pion_includedir = $(includedir)/pion
pion_include_HEADERS = \
	admin_rights.hpp algorithm.hpp exception.hpp hash_map.hpp logger.hpp \
	plugin.hpp plugin_manager.hpp process.hpp scheduler.hpp \
	unit_test_defs.hpp

EXTRA_DIST = config.hpp.win config.hpp.xcode config.hpp.in

SUBDIRS = tcp http
