# --------------------------------
# pion automake configuration file
# --------------------------------

pion_includedir = $(includedir)/pion
pion_include_HEADERS = \
	admin_rights.hpp algorithm.hpp error.hpp hash_map.hpp logger.hpp \
	plugin.hpp plugin_manager.hpp process.hpp scheduler.hpp test.hpp

EXTRA_DIST = config.hpp.win config.hpp.xcode config.hpp.in

SUBDIRS = tcp http test
