# -----------------------------------------------------
# libpion automake configuration file for src directory
# -----------------------------------------------------

lib_LTLIBRARIES = libpion.la

libpion_la_SOURCES = Pion.hpp PionLogger.hpp \
	TCPConnection.hpp TCPProtocol.hpp \
	PionEngine.hpp PionEngine.cpp \
	TCPServer.hpp TCPServer.cpp \
	HTTPRequest.hpp HTTPModule.hpp \
	HTTPResponse.hpp HTTPResponse.cpp \
	HTTPTypes.hpp HTTPTypes.cpp \
	HTTPRequestParser.hpp HTTPRequestParser.cpp \
	HTTPProtocol.hpp HTTPProtocol.cpp
