# -----------------------------------------------------
# libpion automake configuration file for src directory
# -----------------------------------------------------

AM_CPPFLAGS = -I../lib -I../modules

bin_PROGRAMS = PionProtocolTest PionModulesTest

PionProtocolTest_SOURCES = PionProtocolTest.cpp
PionProtocolTest_LDADD = ../lib/libpion.la

PionModulesTest_SOURCES = PionModulesTest.cpp
PionModulesTest_LDADD = ../lib/libpion.la
