# ---------------------------------------
# pion-common automake configuration file 
# ---------------------------------------

pion_common_includedir = $(includedir)/pion
pion_common_include_HEADERS = PionConfig.hpp PionLogger.hpp \
	PionHashMap.hpp PionException.hpp PionPlugin.hpp

EXTRA_DIST = PionConfig.hpp.win
