# ---------------------------------------
# pion-common automake configuration file 
# ---------------------------------------

pion_common_includedir = $(includedir)/pion
pion_common_include_HEADERS = PionConfig.hpp PionLogger.hpp \
	PionHashMap.hpp PionException.hpp PionPlugin.hpp PionCounter.hpp \
	PionScheduler.hpp PluginManager.hpp PionUnitTestDefs.hpp \
	PionDateTime.hpp PionLockedQueue.hpp PionLockFreeQueue.hpp

EXTRA_DIST = PionConfig.hpp.win
