# --------------------------------
# pion automake configuration file
# --------------------------------

pion_http_includedir = $(includedir)/pion/http
pion_http_include_HEADERS = \
	auth.hpp basic_auth.hpp cookie_auth.hpp message.hpp parser.hpp \
	plugin_server.hpp plugin_service.hpp reader.hpp request.hpp \
	request_reader.hpp request_writer.hpp response.hpp response_reader.hpp \
	response_writer.hpp server.hpp types.hpp user.hpp writer.hpp
