# ------------------------------------
# pion-net automake configuration file 
# ------------------------------------

pion_net_includedir = $(includedir)/pion/net
pion_net_include_HEADERS = TCPConnection.hpp TCPServer.hpp \
	HTTPTypes.hpp HTTPRequest.hpp HTTPResponse.hpp \
	HTTPRequestParser.hpp HTTPServer.hpp WebService.hpp
