# ------------------------------------
# pion-net automake configuration file 
# ------------------------------------

pion_net_includedir = $(includedir)/pion/net
pion_net_include_HEADERS = TCPConnection.hpp TCPServer.hpp \
	HTTPTypes.hpp HTTPMessage.hpp HTTPRequest.hpp HTTPResponse.hpp \
	HTTPParser.hpp HTTPWriter.hpp HTTPReader.hpp \
	HTTPRequestReader.hpp HTTPResponseReader.hpp \
	HTTPRequestWriter.hpp HTTPResponseWriter.hpp \
	HTTPServer.hpp WebService.hpp
